Fix font error on small devices

--- a/scss/Base/_typography.scss
+++ b/scss/Base/_typography.scss
@@ -15,7 +15,7 @@ body {
       letter-spacing: 5rem;
       animation: moveInLeft 1s ease-out;
       @include respond(tab-land) {
-        font-size: 4rem;
+        font-size: 9rem;
         letter-spacing: 2.5rem;
       }
       @include respond(tab-port) {
@@ -23,7 +23,7 @@ body {
         letter-spacing: 3rem;
       }
       @include respond(phone) {
-        font-size: 3.5rem;
+        font-size: 5rem;
         letter-spacing: 1rem;
       }
     }
@@ -34,17 +34,17 @@ body {
       animation: moveInRight 1s ease-out 0.55s backwards;
       font-weight: 800;
       @include respond(tab-land) {
-        font-size: 2rem;
+        font-size: 3.5rem;
         letter-spacing: 1rem;
         font-weight: 600;
       }
       @include respond(tab-port) {
-        font-size: 3rem;
+        font-size: 3.3rem;
         letter-spacing: 1.6rem;
         font-weight: 700;
       }
       @include respond(phone) {
-        font-size: 1.5rem;
+        font-size: 2rem;
         letter-spacing: 0.5rem;
         font-weight: 600;
       }
