--- a/scss/Component/_button.scss
+++ b/scss/Component/_button.scss
@@ -8,11 +8,14 @@
     color: $color-btn;
     display: inline-block;
     z-index: 2;
+    font-size: $default-font-size;
     @include respond(tab-port) {
       padding: 2rem 3rem;
+      font-size: 2rem;
     }
     @include respond(phone) {
-      padding: 1rem 2rem;
+      padding: 1.5rem 2.5rem;
+      font-size: $default-font-size;
     }
   }
   &::after {
